Complete test steps for describe environment

--- a/integ-tests/build.gradle
+++ b/integ-tests/build.gradle
@@ -11,6 +11,7 @@ addCucumberSuite 'cucumberTest'
 
 cucumberTest {
     tags = ["~@ignore"]
+    stepDefinitionRoots = ['steps']
 }
 
 dependencies {
